--- a/web/css/style.css
+++ b/web/css/style.css
@@ -25,7 +25,7 @@ html, body {margin: 0;	padding: 0;	font-family: Tahoma, sans-serif;	background-c
 #user_name {color: white;font-size: 18px;text-shadow: -2px -2px 2px rgba(150, 150, 150, 0.66);}
 #options a {	text-decoration: none;	color: white;font-size: 15px;	text-shadow: -2px -2px 2px rgba(150, 150, 150, 0.66);}
 #search_add {width: 100%;	height: 73px;text-align: center;background-color: #dfdfdf;;	margin-top: 7px;}
-#advanced_search {	width: 100%;	height: 95px;	text-align: center;	margin-top: 7px;	background-color: #fff;    position: relative;box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.45);}
+#advanced_search {	width: 100%;	min-height: 95px;	text-align: center;	margin-top: 7px;	background-color: #fff;    position: relative;box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.45);}
 #advanced_search h1 {      font-weight: 900; color: #004465; font-size: 24px; text-transform: uppercase; margin: 0;     padding: 6px 10px; line-height: 24px; text-align: left;}
 .tosearch{  float:left; height: 73px; margin-right: -125px;    width: 811px;}
 .formsearch {background:url(../img/toformpoisk.png) no-repeat;  height: 46px; }
@@ -375,4 +375,27 @@ td {
     filter: alpha(opacity=65);
     -webkit-box-shadow: none;
     box-shadow: none;
+}
+
+#advancedSearchParamsContainer{
+    width: 100%;
+    display: inline-block; 
+    margin-top: 50px;
+    margin-left: 15px;
+    margin-bottom: 10px;
+}
+
+#advancedSearchParamsContainer h4{
+    font-weight: 900;
+    color: #004465;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 6px 10px;
+    line-height: 24px;
+    text-align: left;
+}
+
+.searchParamLabel {
+    float: left;
 }
