--- a/web/css/style.css
+++ b/web/css/style.css
@@ -606,13 +606,14 @@ td {
     margin: 3px;
 }
 
-#searchParamTable {
-    float: left;
+.searchParamTable {
+     width:100%;
+     height: 33px;
 }
 
-#searchParamTable td {
+/*#searchParamTable td {
     text-align: left;
-}
+}*/
 
 .semichecked{
     opacity: 0.5;
