--- a/web/css/style.css
+++ b/web/css/style.css
@@ -244,7 +244,7 @@ form .boxtoinput  textarea{width:100%;resize:none;height:200px;font-family: Helv
 ::-webkit-calendar-picker-indicator{ }
 ::-webkit-calendar-picker-button  { display: none;}
 //.spoiler_body{     z-index: 10;      z-index: 10;    background-color: #fff;    text-align: left;}
-.spoiler_body{     z-index: 10;    background-color: #fff;    text-align: left;    width: 120px;}
+.spoiler_body{     z-index: 10;    background-color: #fff;    text-align: left;    width: 144px;}
 .tostrel {    width: 30px;    height: 15px; background: url(../img/strela.png) no-repeat;  float: right;    margin-top: 5px;    margin-left: 10px;}
 .spoiler_links.active .tostrel { background: url(../img/strelaup.png) no-repeat;}
 .moz{background: url(../img/metka_ozhidanie.png) no-repeat;position:absolute;height: 116px;    width: 116px;    top: 0;    left: 0; z-index: 1;}
@@ -772,4 +772,9 @@ td {
     text-overflow: clip;
     max-width: 147px;
     text-align: left;
+}
+.categorySpan{
+    float: left;
+    text-align: left;
+    width: 104px;
 }
